<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".features.login.presentation.pages.LoginPage">
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40dp"
            android:layout_marginBottom="40sp"
            android:textColor="@android:color/white"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:background="@drawable/custom_edit_text"
            android:height="@dimen/edit_text_height"
            android:textColorHint="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"
            android:text="matheus@gmail.com"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/margin_between_form_fields"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:textCursorDrawable="@null"
            android:background="@drawable/custom_edit_text"
            android:height="@dimen/edit_text_height"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:layout_marginBottom="@dimen/margin_between_form_fields"/>
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/login_loading_progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/loading"
            />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/margin_between_form_fields"
            android:background="@drawable/custom_login_rounded_button"
            android:text="@string/signin"
            android:textSize="@dimen/button_text_size"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"/>
        <LinearLayout
            android:id="@+id/custom_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_between_form_fields">
            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@android:color/darker_gray"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="@dimen/or_text_size"
                android:textColor="@android:color/white"
                android:layout_marginHorizontal="10dp"/>
            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@android:color/darker_gray"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <Button
            android:background="@drawable/custom_register_rounded_button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/margin_between_form_fields"
            android:textSize="@dimen/button_text_size"
            android:textColor="@android:color/white"
            android:text="@string/signup"
            android:textStyle="bold"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textSize="@dimen/forgot_password_text_size"
            android:textColor="@android:color/white"/>
        <ImageView
            android:src="@mipmap/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"/>
    </LinearLayout>
</LinearLayout>