<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".features.sign_in.presentation.pages.SignInPage">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_page"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="@dimen/app_header_text_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:hint="@string/name"
                android:background="@drawable/custom_edit_text"
                android:height="@dimen/edit_text_height"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:inputType="textPersonName"
                android:layout_marginBottom="@dimen/margin_between_form_fields"/>
            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:background="@drawable/custom_edit_text"
                android:height="@dimen/edit_text_height"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="@dimen/margin_between_form_fields"/>
            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:textCursorDrawable="@null"
                android:background="@drawable/custom_edit_text"
                android:height="@dimen/edit_text_height"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:layout_marginBottom="@dimen/margin_between_form_fields"/>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/signup_loading_progress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:indeterminate="true"
                android:visibility="gone"
                android:indeterminateDrawable="@drawable/loading"
                />
            <Button
                android:id="@+id/signup"
                android:background="@drawable/custom_register_rounded_button"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_between_form_fields"
                android:textSize="@dimen/button_text_size"
                android:textColor="@android:color/white"
                android:text="@string/signup"
                android:textStyle="bold"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"/>
            <LinearLayout
                android:id="@+id/back_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:gravity="center"
                    android:textSize="@dimen/go_back_to_login_text_size"
                    android:textColor="@android:color/white"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_arrow_back_24_blue"/>
            </LinearLayout>
            <ImageView
                android:src="@mipmap/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>