<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".features.sign_in.presentation.pages.SignInPage">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_to_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_meeting_agenda"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="@dimen/app_header_text_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/meeting_agenda_title_field"
                android:layout_width="match_parent"
                android:hint="@string/title"
                android:background="@drawable/custom_edit_text"
                android:height="@dimen/edit_text_height"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:inputType="text"
                android:layout_marginBottom="@dimen/margin_between_form_fields"/>
            <EditText
                android:id="@+id/meeting_agenda_description_field"
                android:layout_width="match_parent"
                android:hint="@string/description"
                android:background="@drawable/custom_edit_text"
                android:height="@dimen/edit_text_height"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:inputType="text"
                android:layout_marginBottom="@dimen/margin_between_form_fields"/>
            <EditText
                android:id="@+id/meeting_agenda_details_field"
                android:layout_width="match_parent"
                android:hint="@string/details"
                android:textCursorDrawable="@null"
                android:background="@drawable/custom_edit_text"
                android:height="@dimen/edit_text_height"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:layout_marginBottom="@dimen/margin_between_form_fields"/>
            <EditText
                android:id="@+id/meeting_agenda_author_field"
                android:layout_width="match_parent"
                android:enabled="false"
                android:textCursorDrawable="@null"
                android:background="@drawable/custom_edit_text"
                android:height="@dimen/edit_text_height"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:layout_marginBottom="@dimen/margin_between_form_fields"/>
            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/create_meeting_agenda_loading_progress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:indeterminate="true"
                android:visibility="gone"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/loading"
                />
            <Button
                android:id="@+id/create_meeting_agenda_button"
                android:background="@drawable/custom_register_rounded_button"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_between_form_fields"
                android:textSize="@dimen/button_text_size"
                android:textColor="@android:color/white"
                android:text="@string/create"
                android:textStyle="bold"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>